@@ -1,5 +1,7 @@
 
 6.48  2016-02-22
+  - Fixed bug where the results of the list_files method in Mojo::Home would
+    include directories.
 
 6.47  2016-02-19
   - Deprecated Mojo::Log::is_debug, Mojo::Log::is_error, Mojo::Log::is_info and
